use-case-demos/workload-security-rings/policy/test-allowed-label-values/pod-nodeselector-with-correct-value.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    key: value
    security-ring: sensitive
